Fix apostrophes  + yt link

--- a/Skateboarding blog/Famous skaters.html
+++ b/Skateboarding blog/Famous skaters.html
@@ -45,7 +45,7 @@
 			<div class="image">
 				<img src="Tony Hawk.jpg">
 			</div>
-			<p>Tony Hawk has been a household name for many years now and for good reason. You may know him from tv, from his video games, or just in conversation, but you’d have a hard time finding someone who hasn’t heard of him. He’s most famous for performing the first ever 900, where he makes two and half rotations in the air on a skateboard. This shot him into popularity right as the game Tony Hawk Pro Skater was released, so he became even better known. I’m actually in the middle of playing the second game in the installment.</p>
+			<p>Tony Hawk has been a household name for many years now and for good reason. You may know him from tv, from his video games, or just in conversation, but you'd have a hard time finding someone who hasn't heard of him. He's most famous for performing the first ever 900, where he makes two and half rotations in the air on a skateboard. This shot him into popularity right as the game Tony Hawk Pro Skater was released, so he became even better known. I'm actually in the middle of playing the second game in the installment.</p>
 		</div>
 		<hr>
 		<div class="bam">
@@ -61,11 +61,11 @@
 			<div class="image">
 				<img src="Leticia Bufoni.jpg">
 			</div>
-			<p>Leticia Bufoni is a super successful Brazilian skateboarder recognized for her performance in competitions. She has six X Games medals and numerous Dew Tour results under her belt. She even finished 1st in the 2015 Street League. She’s well known for trying some pretty dangerous tricks that her competitors wouldn’t even think of pulling.</p>
+			<p>Leticia Bufoni is a super successful Brazilian skateboarder recognized for her performance in competitions. She has six X Games medals and numerous Dew Tour results under her belt. She even finished 1st in the 2015 Street League. She's well known for trying some pretty dangerous tricks that her competitors wouldn't even think of pulling.</p>
 		</div>
 	</main>
 	<footer>
-		<p class="fl">Property of Hobo Joe™</p>
+		<p class="fl">Property of Joe!</p>
 		<p class="fr"> Do Not Distribute</p>
 	</footer> 
 </body>
