--- a/Skateboarding blog/How to get started.html
+++ b/Skateboarding blog/How to get started.html
@@ -37,18 +37,18 @@
 	<main>
 		<div class="introduction">
 			<h2>How to get started</h2>
-			<p>So, you’ve bought your board and you understand how its parts work. This point of the process can be the most daunting because you’re not used to standing on a board that seems like it could slip out from under you at any second. That fear is completely normal. This article will focus on how to get comfortable on your board and eventually learn your first tricks.</p>
+			<p>So, you've bought your board and you understand how its parts work. This point of the process can be the most daunting because you're not used to standing on a board that seems like it could slip out from under you at any second. That fear is completely normal. This article will focus on how to get comfortable on your board and eventually learn your first tricks.</p>
 		</div>
 	<hr>
 	<div class="comfortable">
 		<h3>Getting Comfortable</h3>
 		<img src="Foot position.jpg">
-		<p>One of the most important things in skateboarding is your foot positioning. Knowing where to stand and how to push will have a big impact on the way you skate. First you want to find which direction you prefer facing. Most people skate regular but otherwise they skate goofy. Don’t be mistaken by the name, <a href="https://english.stackexchange.com/questions/64470/where-did-the-term-goofy-referring-to-boarding-stance-come-from">it’s actually a reference to the Mickey Mouse character.</a> Generally you want to keep your front foot right behind the bolts near the nose and your back foot right behind the bolts near the tail. If you want to push make sure that your front foot stays on the board and pivots to point towards the nose. Over time your movements will become more and more fluid and you’ll feel more stable riding the board. To speed up this process you should try skateboarding to where you would normally walk and try to skateboard on your daily commute.</p>
+		<p>One of the most important things in skateboarding is your foot positioning. Knowing where to stand and how to push will have a big impact on the way you skate. First you want to find which direction you prefer facing. Most people skate regular but otherwise they skate goofy. Don't be mistaken by the name, <a href="https://english.stackexchange.com/questions/64470/where-did-the-term-goofy-referring-to-boarding-stance-come-from">it's actually a reference to the Mickey Mouse character.</a> Generally you want to keep your front foot right behind the bolts near the nose and your back foot right behind the bolts near the tail. If you want to push make sure that your front foot stays on the board and pivots to point towards the nose. Over time your movements will become more and more fluid and you'll feel more stable riding the board. To speed up this process you should try skateboarding to where you would normally walk and try to skateboard on your daily commute.</p>
 	</div>
 	<hr>
 	<div class="tricks">
 		<h3>Learning Tricks</h3>
-		<p>The ollie is the first trick that most skaters learn. It’s super useful for getting over curbs and obstacles. It’s also the base for a lot of flatground tricks. Despite being the entry trick, it’s pretty difficult to first get a hang of. There are many guides online on how to pop an ollie but I’ve included some of the best skateboarding youtubers I know of that have helped me throughout my skating journey. Watch this video by VLSkate to get a good understanding of how to ollie.</p>
+		<p>The ollie is the first trick that most skaters learn. It's super useful for getting over curbs and obstacles. It's also the base for a lot of flatground tricks. Despite being the entry trick, it's pretty difficult to first get a hang of. There are many guides online on how to pop an ollie but I've included some of the best skateboarding youtubers I know of that have helped me throughout my skating journey. Watch this video by VLSkate to get a good understanding of how to ollie.</p>
 		<iframe width="500" height="281" src="https://www.youtube.com/embed/arDVW-aWWys" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		<div class="youtubers">
 			<h4>My favourite youtubers</h4>
@@ -61,7 +61,7 @@
 	</div>
 	</main>
 	<footer>
-		<p class="fl">Property of Hobo Joe™</p>
+		<p class="fl">Property of Joe!</p>
 		<p class="fr"> Do Not Distribute</p>
 	</footer> 
 </body>
