--- a/Skateboarding blog/MAIN.html
+++ b/Skateboarding blog/MAIN.html
@@ -37,7 +37,7 @@
     <main>
         <div>
             <p class="introduction">
-                My name’s Joe and this is my blog about one of my favourite hobbies, skateboarding. Here you can learn about skateboards themselves, the history of skateboarding, and how you can get started skateboarding too. 
+                My name's Joe and this is my blog about one of my favourite hobbies, skateboarding. Here you can learn about skateboards themselves, the history of skateboarding, and how you can get started skateboarding too. 
             </p>
         </div>
         <div class="directory">			
@@ -92,7 +92,7 @@
         </div>					
     </main>
 	<footer>
-		<p class="fl">Property of Hobo Joe™</p>
+		<p class="fl">Property of Joe!</p>
 		<p class="fr"> Do Not Distribute</p>
 	</footer> 
 </body>
