--- a/Skateboarding blog/Types of boards.html
+++ b/Skateboarding blog/Types of boards.html
@@ -49,8 +49,8 @@
 				<li>Fast</li>
 			</ul>
 			<div class="explanation">
-				<p>Longboards are a great choice for those who want to get from point A to point B with style. Their large and soft wheels can easily cruise over pebbles and cracks in the road, making your riding experience as smooth as possible. They’re great for dealing with the fissured streets of Montreal. There are a few variations in shape but the design mostly seeks to avoid wheel bite and provide a large surface to stand on.</p>
-				<p>They are heavy, however, and don’t come cheap, so make sure to take good care of them.</p>
+				<p>Longboards are a great choice for those who want to get from point A to point B with style. Their large and soft wheels can easily cruise over pebbles and cracks in the road, making your riding experience as smooth as possible. They're great for dealing with the fissured streets of Montreal. There are a few variations in shape but the design mostly seeks to avoid wheel bite and provide a large surface to stand on.</p>
+				<p>They are heavy, however, and don't come cheap, so make sure to take good care of them.</p>
 			</div>
 		</div>
 		<hr>
@@ -64,7 +64,7 @@
 			</ul>
 			<div class="explanation">
 				<p>Double-Kick boards are normally the first thing people think when they hear the word “skateboard.” They’re the gateway to an entire community of people learning a massive variety of tricks. Pulling a kickflip over a curb is one of the most stylish things you can do on the street. These boards can allow you to ride and grind on many different surfaces like rails and ledges. Learning tricks is a great pastime and a good way to get outside.</p>
-				<p>On the other hand, learning the tricks that make this type of skateboard so versatile is a difficult process and takes a lot of dedication. Double-kick boards are also a lot more prone to getting caught on rocks and potholes because of their smaller wheels, so they’re not the best choice for travelling. Be careful while learning tricks on these because it’s easy to fall and hurt yourself.<a href="Helmet.html">Wear a helmet</a></p>		
+				<p>On the other hand, learning the tricks that make this type of skateboard so versatile is a difficult process and takes a lot of dedication. Double-kick boards are also a lot more prone to getting caught on rocks and potholes because of their smaller wheels, so they're not the best choice for travelling. Be careful while learning tricks on these because it's easy to fall and hurt yourself.<a href="Helmet.html">Wear a helmet</a></p>		
 			</div>
 		</div>
 		<hr>
@@ -77,13 +77,13 @@
 				<li>Tight turns</li>
 			</ul>
 			<div class="explanation">
-				<p>Carvers are the closest kind of skateboard to their predecessor, the surfboard. They’re higher off the ground than the other types and have a special type of truck at the front which allows the rider to generate speed by pumping left and right. They’re very popular among surfers because the motion of riding waves is similar to carving on the street.</p>
+				<p>Carvers are the closest kind of skateboard to their predecessor, the surfboard. They're higher off the ground than the other types and have a special type of truck at the front which allows the rider to generate speed by pumping left and right. They're very popular among surfers because the motion of riding waves is similar to carving on the street.</p>
 				<p>You should be careful where you ride these though because if you pick up too much speed the loose trucks could cause you to wobble and bail. These boards are also on the more expensive side.</p>
 			</div>
 		</div>
 	</main>
 	<footer>
-		<p class="fl">Property of Hobo Joe™</p>
+		<p class="fl">Property of Joe!</p>
 		<p class="fr"> Do Not Distribute</p>
 	</footer> 
 </body>
