--- a/Skateboarding blog/World records.html
+++ b/Skateboarding blog/World records.html
@@ -37,31 +37,31 @@
 	<main>
 		<div class="introduction">
 			<h2>World records</h2>
-			<p>Since its creation people have been trying to push skateboarding to its absolute limits. Whether it be mind-bending tricks, dangerous feats, or just sheer insanity, skaters always seem to find a way to do what nobody’s ever done before. This article will go over some of the most interesting Guinness world records to date.</p>
+			<p>Since its creation people have been trying to push skateboarding to its absolute limits. Whether it be mind-bending tricks, dangerous feats, or just sheer insanity, skaters always seem to find a way to do what nobody's ever done before. This article will go over some of the most interesting Guinness world records to date.</p>
 		</div>
 		<hr>
 		<div class="records">
 			<div class="large">
 				<h3>World's Largest Skateboard</h3>
 				<iframe width="700" height="394" src="https://www.youtube.com/embed/sNAGxsIjvqk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				<p>In 2009, Rob Dyrdek and Joe Ciaglia created the largest skateboard ever. It was 11 meters long, 3 meters wide, and 1 meter high. <strong>That’s 0.12029746281714786 football fields!</strong> At that point they should try to get the first skateboarding elephant.</p>
+				<p>In 2009, Rob Dyrdek and Joe Ciaglia created the largest skateboard ever. It was 11 meters long, 3 meters wide, and 1 meter high. <strong>That's 0.12029746281714786 football fields!</strong> At that point they should try to get the first skateboarding elephant.</p>
 			</div>
 			<hr>
 			<div class="speed">
 				<h3>Fastest Recorded Downhill Speed</h3>
 				<img src="speed.jpg">
-				<p>In 2017, Peter Conolly rode a longboard at 91.17 miles per hour in Les Éboulements in Quebec, Canada. <strong>At that speed you can cross an entire football field in 2.2464 seconds!</strong> If I were going that fast on a plank of wood with wheels on it I think I’d pack a diaper just in case.</p>
+				<p>In 2017, Peter Conolly rode a longboard at 91.17 miles per hour in Les Éboulements in Quebec, Canada. <strong>At that speed you can cross an entire football field in 2.2464 seconds!</strong> If I were going that fast on a plank of wood with wheels on it I think I'd pack a diaper just in case.</p>
 			</div>
 			<hr>
 			<div class="ollie">
 				<h3>Highest Flatground Ollie</h3>
 				<img src="Ollie.jpg">
-				<p>In 2011, Aldrin Garcia managed to pop a 45 inch ollie at the Maloof High Ollie Challenge in Las Vegas, Nevada, USA. <strong>That’s 12.5% the height of a regulation football goal post.</strong> Just 55 inches higher and he would have ollied himself into a field goal.</p>
+				<p>In 2011, Aldrin Garcia managed to pop a 45 inch ollie at the Maloof High Ollie Challenge in Las Vegas, Nevada, USA. <strong>That's 12.5% the height of a regulation football goal post.</strong> Just 55 inches higher and he would have ollied himself into a field goal.</p>
 			</div>
 		</div>
 	</main>
 	<footer>
-		<p class="fl">Property of Hobo Joe™</p>
+		<p class="fl">Property of Joe!</p>
 		<p class="fr"> Do Not Distribute</p>
 	</footer> 
 </body>
