--- a/Skateboarding blog/Components of boards.html
+++ b/Skateboarding blog/Components of boards.html
@@ -36,7 +36,7 @@
 	<main>
 	<div class="introduction">
 		<h2>Components of Boards</h2>
-		<p>Skateboard parts have evolved over the years to provide the best experience possible. Small impacts on a skateboard’s parts can significantly change the way it handles and feels. This article will go over some of the most important parts and their variability.</p>
+		<p>Skateboard parts have evolved over the years to provide the best experience possible. Small impacts on a skateboard's parts can significantly change the way it handles and feels. This article will go over some of the most important parts and their variability.</p>
 	</div>
 	<hr>
 	<div class="diagram">
@@ -45,24 +45,24 @@
 	<div class="parts">
 		<div class="deck">
 			<h3>Deck</h3>
-			<p>The deck is the main part of the board, the thing you stand on. It’s made of multiple layers of birch or maple wood, usually 7 to 9. The deck is shaped in different ways to accommodate for different board types. Generally, the most important measurement is the width. Wider decks have better balance but make it harder to do flip-tricks. Thinner decks are the opposite.</p>
+			<p>The deck is the main part of the board, the thing you stand on. It's made of multiple layers of birch or maple wood, usually 7 to 9. The deck is shaped in different ways to accommodate for different board types. Generally, the most important measurement is the width. Wider decks have better balance but make it harder to do flip-tricks. Thinner decks are the opposite.</p>
 		</div>
 		<div class="grip-tape">
 			<h3>Grip-tape</h3>
-			<p>Grip tape is the sandpaper-like surface that gives you traction while riding the board. It’s adhesive on the other side, allowing you to stick it to the board once and not worry about it. The gripping property also helps to put spin on certain tricks. Many people like to cut out a strip of the grip-tape near the front of a double-kick board to indicate where the nose is. This is helpful because the tail is slightly lower to the ground than the nose.</p>
+			<p>Grip tape is the sandpaper-like surface that gives you traction while riding the board. It's adhesive on the other side, allowing you to stick it to the board once and not worry about it. The gripping property also helps to put spin on certain tricks. Many people like to cut out a strip of the grip-tape near the front of a double-kick board to indicate where the nose is. This is helpful because the tail is slightly lower to the ground than the nose.</p>
 		</div>
 		<div class="trucks">
 			<h3>Trucks</h3>
-			<p>The trucks connect the deck to the wheels. Their range of motion can be changed by turning the kingpin, making them “tighter” or “looser.” This adjustment determines how easily the board leans and turns. It’s usually up to preference how tight or loose you want your trucks to be but if you’re planning on skateboarding downhill then keeping them tight helps to avoid speed wobbles.</p>
+			<p>The trucks connect the deck to the wheels. Their range of motion can be changed by turning the kingpin, making them “tighter” or “looser.” This adjustment determines how easily the board leans and turns. It's usually up to preference how tight or loose you want your trucks to be but if you're planning on skateboarding downhill then keeping them tight helps to avoid speed wobbles.</p>
 		</div>
 		<div class="wheels">
 			<h3>Wheels</h3>
-			<p>The wheels are the reason the board can move. They’re typically made of polyurethane and vary in size and hardness. Smaller wheels are slower and better for trick skating because they keep the tail lower to the ground. Bigger wheels are faster and better for cruising and vert skating (U pipes and bowls). Softer wheels can better handle rough surfaces but tend to stick on the road, so harder wheels are better for popping technical tricks.</p>
+			<p>The wheels are the reason the board can move. They're typically made of polyurethane and vary in size and hardness. Smaller wheels are slower and better for trick skating because they keep the tail lower to the ground. Bigger wheels are faster and better for cruising and vert skating (U pipes and bowls). Softer wheels can better handle rough surfaces but tend to stick on the road, so harder wheels are better for popping technical tricks.</p>
 		</div>
 	</div>
 	</main>
 	<footer>
-		<p class="fl">Property of Hobo Joe™</p>
+		<p class="fl">Property of Joe!</p>
 		<p class="fr"> Do Not Distribute</p>
 	</footer> 
 </body>
