--- a/Skateboarding blog/History.html
+++ b/Skateboarding blog/History.html
@@ -40,11 +40,11 @@
 			<p>Most people know that skateboarding has its roots in surfing, but most aren’t familiar with how it’s evolved to be how it is today. This article includes a nice youtube video that goes in depth regarding how skateboarding was born and the numerous changes it has undergone up until now.</p>
 		</div>
 		<div class="video">
-			<iframe width="2000" height="671" src="https://www.youtube.com/embed/Va709SdW6Ec" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="2000" height="671" src="https://www.youtube.com/watch?v=QxuzhWVtOmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 	</main>
 	<footer>
-		<p class="fl">Property of Hobo Joe™</p>
+		<p class="fl">Property of Joe!</p>
 		<p class="fr"> Do Not Distribute</p>
 	</footer> 
 </body>
