--- a/Skateboarding blog/Components of boards.html
+++ b/Skateboarding blog/Components of boards.html
@@ -53,7 +53,7 @@
 		</div>
 		<div class="trucks">
 			<h3>Trucks</h3>
-			<p>The trucks connect the deck to the wheels. Their range of motion can be changed by turning the kingpin, making them “tighter” or “looser.” This adjustment determines how easily the board leans and turns. It's usually up to preference how tight or loose you want your trucks to be but if you're planning on skateboarding downhill then keeping them tight helps to avoid speed wobbles.</p>
+			<p>The trucks connect the deck to the wheels. Their range of motion can be changed by turning the kingpin, making them "tighter" or “looser." This adjustment determines how easily the board leans and turns. It's usually up to preference how tight or loose you want your trucks to be but if you're planning on skateboarding downhill then keeping them tight helps to avoid speed wobbles.</p>
 		</div>
 		<div class="wheels">
 			<h3>Wheels</h3>
