--- a/Skateboarding blog/Types of boards.html
+++ b/Skateboarding blog/Types of boards.html
@@ -63,7 +63,7 @@
 				<li>Maneuverable</li>
 			</ul>
 			<div class="explanation">
-				<p>Double-Kick boards are normally the first thing people think when they hear the word “skateboard.” They’re the gateway to an entire community of people learning a massive variety of tricks. Pulling a kickflip over a curb is one of the most stylish things you can do on the street. These boards can allow you to ride and grind on many different surfaces like rails and ledges. Learning tricks is a great pastime and a good way to get outside.</p>
+				<p>Double-Kick boards are normally the first thing people think when they hear the word "skateboard." They're the gateway to an entire community of people learning a massive variety of tricks. Pulling a kickflip over a curb is one of the most stylish things you can do on the street. These boards can allow you to ride and grind on many different surfaces like rails and ledges. Learning tricks is a great pastime and a good way to get outside.</p>
 				<p>On the other hand, learning the tricks that make this type of skateboard so versatile is a difficult process and takes a lot of dedication. Double-kick boards are also a lot more prone to getting caught on rocks and potholes because of their smaller wheels, so they're not the best choice for travelling. Be careful while learning tricks on these because it's easy to fall and hurt yourself.<a href="Helmet.html">Wear a helmet</a></p>		
 			</div>
 		</div>
