--- a/Skateboarding blog/Famous skaters.html
+++ b/Skateboarding blog/Famous skaters.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="Famous skaters.css"> 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+	<meta charset="utf-8">
 </head> 
 
 <body>
